# FleetRL

./: .gitignore  .readthedocs.yml  CT_train_td3.ipynb  LICENSE  LMD_train_td3.ipynb  MANIFEST.in  README.md  UT_train_td3.ipynb  complete_pipeline.ipynb  config.json  extensive_requirements.in  extensive_requirements.txt  gcp_train_setup.ipynb  gcp_training.ipynb  gcp_training_lmd.ipynb  oldreq.txt  pyproject.toml  readme.md  requirements-dev.in  requirements-dev.txt  requirements.in  requirements.txt  setup.py  train_setup.ipynb  training_all_cases.ipynb  tutorial.ipynb  tutorial.json
Benchmarks/: uncontrolled_charging.py
FleetRL/: complete_pipeline.ipynb
FleetRL/Benchmarks/: distributed_charging.py  linear_optimization.py  night_charging.py
FleetRL/Final_Inputs/: load_lmd.csv  spot_2020.csv  spot_2021_new.csv  test_lmd.csv
FleetRL/agent_eval/: basic_evaluation.py  evaluation.py
FleetRL/benchmarking/: distributed_charging.py  linear_optimization.py  night_charging.py  uncontrolled_charging.py
FleetRL/fleet_env/: episode.py  fleet_environment.py
docs/: FleetRL.agent_eval.rst  FleetRL.benchmarking.rst  FleetRL.fleet_env.config.rst  FleetRL.fleet_env.rst  FleetRL.rst  FleetRL.utils.battery_degradation.rst  FleetRL.utils.data_logger.rst  FleetRL.utils.data_processing.rst  FleetRL.utils.ev_charging.rst  FleetRL.utils.event_manager.rst  FleetRL.utils.load_calculation.rst  FleetRL.utils.normalization.rst  FleetRL.utils.observation.rst  FleetRL.utils.rendering.rst  FleetRL.utils.rst  FleetRL.utils.schedule.rst  FleetRL.utils.time_picker.rst  conf.py  fleetrl.agent_eval.rst  fleetrl.benchmarking.rst  fleetrl.fleet_env.config.rst  fleetrl.fleet_env.rst  fleetrl.rst  fleetrl.utils.battery_degradation.rst  fleetrl.utils.data_logger.rst  fleetrl.utils.data_processing.rst  fleetrl.utils.ev_charging.rst  fleetrl.utils.event_manager.rst  fleetrl.utils.load_calculation.rst  fleetrl.utils.normalization.rst  fleetrl.utils.observation.rst  fleetrl.utils.rendering.rst  fleetrl.utils.rst  fleetrl.utils.schedule.rst  fleetrl.utils.time_picker.rst  index.rst  modules.rst
docs/guide/: agent_eval.rst  agent_training.rst  custom_env.rst  installation.rst  overview.rst
fleetrl/agent_eval/: basic_evaluation.py  evaluation.py
fleetrl_2/: __main__.py
inputs/: 1_lkw.csv  spot_2021_new.csv  spot_2021_new_tariff.csv
src/: complete_pipeline.ipynb
src-FleetRL/: setup.py
src/FleetRL/: eda.ipynb  (+4 more)
tests/: environment_test.py  test_fleet_env.py
(+377 files in other folders)
