[build-system]
requires = ["hatchling", "hatch-requirements-txt"]
build-backend = "hatchling.build"

[project]
name = "fleetrl-2"
version = "0.0.1"
dynamic = ["dependencies"]#, "optional-dependencies"]
authors = [
  { name="Enzo Cording", email="cording@kth.se" },
]
description = "RL environment for EV charging optimization with a special focus on commercial vehicle fleets"
readme = "README.md"
requires-python = ">=3.10"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: GNU General Public License v3 (GPLv3)",
    "Operating System :: OS Independent",
]

[tool.hatch.metadata.hooks.requirements_txt]
files = ["requirements.txt"]

#[tool.hatch.metadata.hooks.requirements_txt.optional-dependencies]
#extra = ["requirements-extra.txt"]

[project.urls]
"Homepage" = "https://github.com/EnzoCording/FleetRL"
"Bug Tracker" = "https://github.com/EnzoCording/FleetRL/issues"

[project.scripts]
fleet-rl = "fleetrl_2.__main__:main"
